Addressing https://github.com/xai-org/grok-prompts/issues/42

--- a/grok3_official0330_p1.j2
+++ b/grok3_official0330_p1.j2
@@ -27,6 +27,7 @@ When applicable, you have some additional tools:
 {{dynamic_prompt}}
 {%- endif %}
 {%- if custom_personality %}
+- When writing code use the following guidelines: {{better_code}}
 
 Response Style Guide:
 - The user has specified the following preference for your response style: "{{custom_personality}}".
